syntax = "proto3";

package user;

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool isValid = 1;
  string userId =2;
}

message UserInfoRequest {
  string userId = 1;
}

message UserInfoResponse {
  string name = 2;
  string email = 3;
}
service UserService {
    rpc validate (TokenRequest) returns (TokenResponse);
    rpc getUser(UserInfoRequest) returns (UserInfoResponse) {}
  }
